--- a/grumpycat.html
+++ b/grumpycat.html
@@ -25,7 +25,7 @@
     <h2 id="Top">Grumpy Cat</h2>
     <img src="grumpy.jpg" width="400" height="300" alt="The late Tardar Sauce." />
     <p>Grumpy Cat (real name: Tardar Sauce), was also known for her unique physical appearance. Due to birth “defects”, such as an underbite and feline dwarfism, she was famous for her constantly "grumpy" expression.</p>
-    <img src="grumpy1.jpg" width="400" height="300" alt="A picture of Tardar Sauce in the sunlight." />
+    <img src="grumpy1.jpeg" width="400" height="300" alt="A picture of Tardar Sauce in the sunlight." />
     <p>Tardar Sauce was born in Arizona, on April 4, 2012. She was named after a popular condiment, made out of mayonnaise and pickles. In 2012, her photos were posted to Reddit and she gained an instant following due to her unique looks.</p>
     <iframe width="400" height="300" src="https://www.youtube.com/embed/14yw7XRPcZM" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <!-- No matter how hard I tried, the images wouldn't be centered together. At least the YouTube videos can sit on the same "line"! -->
